# krkr2-tools

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  README_CN.md  coi-server.py  mcpproxy.js  plan.md  server.crt  server.key  skills-lock.json  vcpkg-configuration.json  vcpkg.json
cpp/core/base/: CMakeLists.txt  ScriptMgnIntf.cpp  StorageIntf.cpp  TextStream.cpp  XP3Archive.cpp  ZIPArchive.cpp
cpp/core/base/impl/: StorageImpl.cpp  StorageImpl.h  SysInitImpl.cpp
cpp/core/visual/: CMakeLists.txt  GraphicsLoadThread.cpp  GraphicsLoaderIntf.cpp  LayerBitmapIntf.cpp  LayerIntf.cpp  LayerIntf.h  LayerManager.cpp  LoadPNG.cpp  RenderManager.cpp  RenderManager.h  WindowIntf.cpp  tvpgl.cpp
cpp/core/visual/impl/: BasicDrawDevice.cpp  DrawDevice.cpp  DrawDevice.h  LayerBitmapImpl.cpp  LayerBitmapImpl.h  PassThroughDrawDevice.cpp  VideoOvlImpl.cpp  WindowImpl.h
cpp/core/visual/ogl/: RenderManager_ogl.cpp  etcpak.cpp
cpp/plugins/: CMakeLists.txt  DrawDeviceD3D.cpp  PackinOne.cpp  kirikiroid2.cpp  layerExBTOA.cpp  layerExRaster.cpp  shrinkCopy.cpp  xp3filter.cpp
cpp/plugins/layerExImage/: CMakeLists.txt  LayerExImage.cpp  LayerExImage.h  Main.cpp
cpp/plugins/layerex_draw/: CMakeLists.txt
cpp/plugins/motionplayer/: CMakeLists.txt  D3DAdaptor.cpp  D3DAdaptor.h  D3DEmoteModule.h  EmotePlayer.cpp  EmotePlayer.h  HitTestInternal.h  MotionNode.h  MotionNodeBridge.cpp  MotionTraceWeb.cpp  MotionTraceWeb.h  NodeTree.cpp  NodeTree.h  Player.h  PlayerCore.cpp  PlayerDrawDispatch.cpp  PlayerFrameProgress.cpp  PlayerInternal.h  PlayerLayerQuery.cpp  PlayerMotionLoad.cpp  PlayerRender.cpp  PlayerRenderExecute.cpp  PlayerRenderInternal.cpp  PlayerRenderInternal.h  PlayerRenderItems.cpp  PlayerRenderTargets.cpp  PlayerResource.cpp  PlayerTimeline.cpp  PlayerUpdateAnchor.cpp  PlayerUpdateChildMotion.cpp  PlayerUpdateGeometry.cpp  PlayerUpdateLayerEval.cpp  PlayerUpdateLayers.cpp  PlayerUpdateLayersInternal.h  PlayerUpdateParticles.cpp  PlayerVariable.cpp  PrivateMotionGLL.cpp  PrivateMotionGLL.h  ResourceManager.cpp  ResourceManager.h  (+7 more)
cpp/plugins/psbfile/: CMakeLists.txt  PSBFile.cpp  PSBMedia.cpp  PSBMediaRegistry.cpp  PSBMediaRegistry.h  main.cpp
tests/: CMakeLists.txt  test_config.h.in
tests/differential/: run_all.py
tests/differential/motion_stage_projections/: frame_selection_v1.json
tests/differential/native/: CMakeLists.txt  motion_playback_native.cpp
tests/differential/oracle_runner/: README.md  adb_engine.py  arm64_abi.py  check_harness_abi.py  frida_agent.js  frida_motion_agent.js  frida_motion_stage_agent.js  frida_motion_stage_tracer.py  frida_motion_tracer.py  frida_tracer.py  guest_heap.py  motion_capture_window.py  png_artifacts.py  requirements-oracle.txt  stl_layout.py  trace_diff.py  trace_targets.py
tests/differential/oracle_runner/adapters/: bezier_curve.py  geometry_hit_test.py  local_transform.py  motion_playback.py  position_interp.py
tests/differential/oracle_runner/fixtures/: build_logo_test_oracle.sh
tests/differential/oracle_runner/harness/: .gitignore  Android.mk  Application.mk  CMakeLists.txt  README.md  build_legacy.sh  harness.cpp  jni_bridge.cpp
tests/differential/oracle_runner/harness-apk/: .gitignore  HarnessActivity.java  README.md  build.sh  manifest-patch.xml  patch_manifest.py
tests/differential/python/: compare_motion_draw_dispatch.py  compare_motion_playback_traces.py  compare_motion_render_steps.py  frida_hook_stencil_type.py  native_lldb_motion_stage_trace.py  native_lldb_motion_trace.py  requirements-wasm.txt  run_bezier_curve_adb.py  run_bezier_curve_wasmtime.py  run_geometry_hit_test_adb.py  run_geometry_hit_test_wasmtime.py  run_local_transform_adb.py  run_local_transform_wasmtime.py  run_motion_playback.py  run_motion_playback_native.py  run_motion_playback_wasmtime.py  run_motion_stage_native.py  run_motion_stage_oracle.py  run_position_interp_adb.py  run_position_interp_wasmtime.py  run_psb_rl_decompress_wasmtime.py  test_motion_playback_strict_oracle.py  wasm_lldb_motion_trace.py  wasm_lldb_runner.py  wasmtime_gl_provider.py  wasmtime_motion_playback_driver.py
tests/differential/specs/bezier_curve/: multi_segment_first.json  multi_segment_second.json  single_segment_linear.json  single_segment_mid.json  single_segment_t_after.json  single_segment_t_before.json
tests/differential/specs/geometry_hit_test/: circle_boundary.json  circle_inside.json  circle_outside.json  invalid_type.json  quad_inside.json  quad_outside.json  quad_winding_clockwise.json  quad_winding_counterclockwise.json  rect_left_top_inclusive.json  rect_right_bottom_exclusive.json
tests/differential/specs/local_transform/: combined_default_order.json  custom_order_2103.json  flip_x_only.json  flip_y_only.json  identity.json  rotate_90.json  scale_non_uniform.json  slant_only.json
tests/differential/specs/motion_playback/: m2logo.json  yuzulogo.json
tests/differential/specs/position_interp/: linear_no_easing.json  linear_t0.json  linear_t1.json  linear_with_easing.json  same_positions.json
tests/differential/wasm/: motion_playback_wasmtime.cpp
tests/differential/wasmtime/: CMakeLists.txt  bezier_curve_wasm.cpp  geometry_hit_test_wasm.cpp  local_transform_wasm.cpp  motion_playback_wasmtime.cpp  position_interp_wasm.cpp  psb_rl_decompress_wasm.cpp  strip_wasm_export.py
tests/test_files/emote/: ezsave.pimg
tests/test_files/tjs2/: test.tjs  test_class.tjs  test_function.tjs  test_misc.tjs  test_string.tjs  test_variant.tjs  test_with.tjs
tests/test_files/xp3/: kag3_intro.xp3  kag3_template.xp3
tests/unit-tests/core/movie/: ffmpeg.cpp  (+1 more)
tests/unit-tests/plugins/: CMakeLists.txt  main.cpp  motionplayer-dll.cpp  psbfile-dll.cpp
tools/: CMakeLists.txt  README.md  debug-capture.sh
tools/ksdec/: CMakeLists.txt  main.cpp
tools/motionsim/: CMakeLists.txt  compare_trace.py  main.cpp
tools/mtndump/: CMakeLists.txt  main.cpp
tools/tjsdump/: CMakeLists.txt  main.cpp
tools/xp3/: CMakeLists.txt  README.md  main.cpp
tools/xp3pack/: CMakeLists.txt  main.cpp
(+307 files in other folders)
